--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Hero from '../components/Hero.astro';
 import AboutMe from '../components/AboutMe.astro';
 import Projects from '../components/Projects.astro';
 import Skills from '../components/Skills.astro';
+import Certificates from '../components/Certificates.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 ---
@@ -19,6 +20,7 @@ import Footer from '../components/Footer.astro';
     <AboutMe />
     <Projects />
     <Skills />
+    <Certificates />
     <Contact />
   </main>
   
