--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,10 @@ import Footer from '../components/Footer.astro';
   <BackgroundBlobs />
   <Navbar />
   
-  <main>
+  <main id="main-content">
     <Hero />
-    <AboutMe />
     <Projects />
+    <AboutMe />
     <Skills />
     <Certificates />
     <Contact />
